syntax = "proto3";

package foodfund.campaign;

service CampaignService {
  rpc Health(HealthRequest) returns (HealthResponse);
  rpc GetCampaign(GetCampaignRequest) returns (GetCampaignResponse);
  rpc GetCampaignIdByPhaseId(GetCampaignIdByPhaseIdRequest) returns (GetCampaignIdByPhaseIdResponse);
  rpc GetCampaignPhases(GetCampaignPhasesRequest) returns (GetCampaignPhasesResponse);
}

// Messages
message Campaign {
  string id = 1;
  string title = 2;
  string description = 3;
  string cover_image = 4;
  string location = 5;
  string target_amount = 6;
  int32 donation_count = 7;
  string received_amount = 8;
  string status = 9;
  string fundraising_start_date = 10;
  string fundraising_end_date = 11;
  bool is_active = 12;
  string created_by = 13;
  string created_at = 14;
  string updated_at = 15;
}

// Health Check
message HealthRequest {}

message HealthResponse {
  bool healthy = 1;
  string message = 2;
}

// Get Campaign
message GetCampaignRequest {
  string id = 1;
}

message GetCampaignResponse {
  bool success = 1;
  Campaign campaign = 2;
  string error = 3;
}

message GetCampaignIdByPhaseIdRequest {
  string phase_id = 1;
}

message GetCampaignIdByPhaseIdResponse {
  bool success = 1;
  string campaign_id = 2;
  string error = 3;
}

message GetCampaignPhasesRequest {
  string campaign_id = 1;
}

message CampaignPhase {
  string id = 1;
  string campaign_id = 2;
  string phase_name = 3;
  string location = 4;
  string ingredient_purchase_date = 5;
  string cooking_date = 6;
  string delivery_date = 7;
  string ingredient_budget_percentage = 8;
  string cooking_budget_percentage = 9;
  string delivery_budget_percentage = 10;
}

message GetCampaignPhasesResponse {
  bool success = 1;
  repeated CampaignPhase phases = 2;
  string error = 3;
}